forcedotcom/src/objects/SensorData__c.object
<CustomObject>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Robot__c</fullName>
        <label>Robot</label>
        <referenceTo>Robot__c</referenceTo>
        <relationshipLabel>Sensor Data</relationshipLabel>
        <relationshipName>Sensor_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ultrasonic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sensor Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SD-{00000000}</displayFormat>
        <label>Sensor Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sensor Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>